# opengl-polygons

./: CMakeLists.txt  Readme.md
common/: controls.cpp  loadLua.hpp  shader.cpp
src/: CG.cpp
